add scripts for running all dependencies on modulepath